--- a/index.html
+++ b/index.html
@@ -4,4 +4,7 @@
     <title>CubeOS</title>
     <script src="script.js"></script>
   </head>
+  <body>
+    <noscript>Please activate JavaScript to boot CubeOS.</noscript>
+  </body>
 </html>
